# matrix_tools

./: .gitignore  README.md  build.sh
cache_speed/: CMakeLists.txt  mem-lat.cpp  script
habr_article/: CMakeLists.txt  Graphics.xlsx  common.h  cpu_info.h  habr_dgemm.cpp  habr_dgemm.h  test_habr_gemm.cpp
habr_article/include/: common.h
habr_article/src/: common.cpp  cpu_info.cpp  habr_dgemm.cpp
openBLAS/: CMakeLists.txt  Graphic OpenBLAS.xlsx  Graphic Slow GEMM.xlsx  common.cpp  common.h  slow_dgemm.cpp  test_cblas_dgemm.cc  test_cblas_dgemm.cpp  test_slow_gemm.cpp  График OpenBLAS.xlsx
type_cpu/: type_cpu.cpp  type_cpu.sln  type_cpu.vcxproj  type_cpu.vcxproj.filters
